# GamoplsApp

./: .env.example  .gitignore  CLAUDE.md  EDGE_BOX_GUIDE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  suggestions.md  turbo.json
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: fleet-health-meter.tsx  sidebar-nav.tsx  theme-toggle.tsx
apps/web/lib/: demo-login.ts  events-feed.ts  fleet-health.ts  gateway-proxy.ts  (+9 more)
docs/architecture/: GAMOPLS_TeamCore_Platform_Architecture.md
infra/: docker-compose.yml
infra/mosquitto/: acl  mosquitto.conf  passwd
plugins/asset-vehicle/: package.json
plugins/ingestion-edgebox/: package.json
scripts/: check-architecture-rules.mjs  start-all.mjs
scripts/__tests__/: check-architecture-rules.test.mjs
services/ai-engine/: pyproject.toml
services/ai-engine/src/ai_engine/: __init__.py  agent_skeleton.py  events.py  health_score.py  idle_detection.py  publisher.py  server.py  task_suggestion.py
services/ai-engine/tests/: test_agent_skeleton.py  test_health_score.py  test_idle_detection.py  test_task_suggestion.py
services/backend/: package.json
services/board/: package.json  tsconfig.json
services/chat/: package.json
services/core-ingestion/: go.mod
services/fleet/: package.json  test-preview-publisher.mjs  test-preview-publisher2.mjs
services/hub/: package.json
services/map/: package.json  tsconfig.json
services/registry/: package.json
(+245 files in other folders)
