[project]
name = "ai-engine"
version = "0.1.0"
description = "GAMOPLS TeamCore AI Health Engine — health scoring, predictive maintenance agent skeleton, TaskSuggested publishing. Communicates with other services only via NATS events (packages/event-schemas-compatible JSON), never direct service calls."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Real predictive-maintenance graph + NATS transport are optional for this
# skeleton phase. Tests never require these to be installed — agent_skeleton.py
# and publisher.py fall back to a no-network mock/stub if they're absent.
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
nats = [
    "nats-py>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
